Main content and footer added
Created a main posts area and footer

--- a/index.html
+++ b/index.html
@@ -25,5 +25,32 @@
 
     </div>
 
+    <div id="area-principal">
+
+        <div id="area-postagens">
+            
+            <!--Abertura postagem-->
+            <div class="postagem">
+                <h2>Titulo da postagem 1</h2>
+                <span>postado 20 março 2022</span>
+                <img width="620px" src="images/imagem1.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa repudiandae autem ducimus error sunt voluptate omnis mollitia. Eaque sunt velit, error accusantium id labore tenetur reprehenderit aut, illum eligendi tempore.</p>
+                <a href="">Leia Mais</a>
+
+            </div>
+            <!--//Fechamento postagem-->
+
+        </div>
+
+        <div id="area-lateral">
+            Area Lateral 
+        </div>
+
+        <div id="rodape">
+            Todos os direitos reservados
+        </div>
+
+    </div>
+
 </body>
 </html>
