Project final modifications
Final project modifications.

--- a/index.html
+++ b/index.html
@@ -29,21 +29,57 @@
 
         <div id="area-postagens">
             
-            <!--Abertura postagem-->
+            <!--Abertura postagem 1-->
             <div class="postagem">
                 <h2>Titulo da postagem 1</h2>
-                <span>postado 20 março 2022</span>
+                <span class="data-postagem">postado 20 março 2022</span>
                 <img width="620px" src="images/imagem1.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa repudiandae autem ducimus error sunt voluptate omnis mollitia. Eaque sunt velit, error accusantium id labore tenetur reprehenderit aut, illum eligendi tempore.</p>
                 <a href="">Leia Mais</a>
 
             </div>
-            <!--//Fechamento postagem-->
+            <!--//Fechamento postagem 1-->
+
+            <!--Abertura postagem 2-->
+            <div class="postagem">
+                <h2>Titulo da postagem 2</h2>
+                <span class="data-postagem">postado 10 março 2022</span>
+                <img width="620px" src="images/imagem2.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa repudiandae autem ducimus error sunt voluptate omnis mollitia. Eaque sunt velit, error accusantium id labore tenetur reprehenderit aut, illum eligendi tempore.</p>
+                <a href="">Leia Mais</a>
+
+            </div>
+            <!--//Fechamento postagem 2-->
 
         </div>
 
         <div id="area-lateral">
-            Area Lateral 
+
+            <div class="conteudo-lateral">
+
+                <h3>Postagens recentes</h3>
+
+                <div class="postagem-lateral">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="">Leia mais</a>
+                </div>
+
+                <div class="postagem-lateral" style="border-bottom: none;">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="">Leia mais</a>
+                </div>
+            </div>
+
+            <div class="conteudo-lateral">
+
+                <h3>Categorias</h3>
+
+                <a href="">Jogos</a><br>
+                <a href="">Celulares</a><br>
+                <a href="">Informática</a><br>
+                <a href="">Eletrônicos</a><br>
+            </div>
+
         </div>
 
         <div id="rodape">
